--- a/src/routes/navbar.css
+++ b/src/routes/navbar.css
@@ -121,3 +121,17 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #45a049;
 }
+
+.cartNumber {
+  position: fixed;
+  top: 0;
+  right: 5;
+  border: 2px solid #000000;
+  z-index: 1;
+  text-align: center;
+  border-radius: 50%;
+  width: 20px;
+  color: green;
+  font-weight: 1000px;
+  background-color: rgba(216, 221, 216, 0.836);
+}
