--- a/src/routes/product.css
+++ b/src/routes/product.css
@@ -6,6 +6,31 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
+  .productItem {
+   position: relative;
+  }
+
+  .deleteitem {
+    position: absolute;
+    top: -35px;
+    left: 250px;
+    justify-content: center;
+    border: 1px solid black;
+    color: #fff;
+    background-color: #f00;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: none;
+  }
+  
+  .productItem:hover .deleteitem {
+    display: block;
+  }
+
+  
   
   .form-title {
     text-align: center;
